--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,22 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap');
+
 html,
 body {
     width: 100%;
 }
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Raleway'; sans-serif;
     margin: 0;
     width: 100%;
 }
+
 main {
     padding: 8px 3rem 0;
 }
+
 /* .en-tete {
     /* border: 3px solid black; */
 
 header {
     width: 100%;
+    height: fit-content;
     position: relative;
+    margin-bottom: 2.5rem;
 }
+
 header nav {
     width: 100%;
     height: 60px;
@@ -24,6 +32,7 @@ header nav {
     display: flex;
     justify-content: space-between;
 }
+
 header .logo {
     width: max-content;
     height: 100%;
@@ -33,6 +42,7 @@ header .logo {
     align-items: center;
     /* border: thin solid black; */
 }
+
 header .logo>.rond {
     width: 2rem;
     height: 2rem;
@@ -47,26 +57,31 @@ header .logo>.rond {
     font-size: 25px;
     /* border: 1px solid black; */
 }
+
 header .nom {
-font-size: 1.25rem;
-font-weight: 400;
+    font-size: 1.25rem;
+    font-weight: 400;
 }
+
 header .nom span {
     font-weight: 600;
     /* color: blue; */
 }
-header .bio_section{
+
+header .bio_section {
     width: 70%;
     display: grid;
     grid-template-columns: 1fr 2fr;
     margin: 4rem auto 0;
 }
-header .avatar{
+
+header .avatar {
     max-width: 240px;
     max-height: 240px;
     margin: auto;
 }
-header .avatar img{
+
+header .avatar img {
     width: 100%;
     height: 100%;
     object-fit: contain;
@@ -75,41 +90,48 @@ header .avatar img{
     border-radius: 50%;
     box-shadow: 0px 1px 8px 3px rgba(100, 100, 100, .25);
 }
-header .bio{
+
+header .bio {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: start;
 }
-.bio small{
+
+.bio small {
     font-size: 13px;
     color: #6f6f6f;
     font-weight: 600;
-    margin-bottom: .5rem; 
+    margin-bottom: .5rem;
 }
-.bio h1{
+
+.bio h1 {
     margin: 0;
     line-height: 1;
     word-spacing: -3;
     font-weight: 700;
 }
-p{
+
+p {
     line-height: 1.5;
     color: #222;
     font-weight: 400;
     margin: 0;
 }
-.bio p{
+
+.bio p {
     margin-top: 10px;
     margin-bottom: 14px;
 }
-.bio-buttons{
+
+.bio-buttons {
     width: 50%;
     display: flex;
     column-gap: 10px;
     height: auto;
 }
-.bio button{
+
+.bio button {
     width: 130px;
     padding: 8px 12px;
     border-radius: 18px;
@@ -119,12 +141,15 @@ p{
     box-shadow: .5px 1px 6px 2px rgba(100, 100, 100, .2);
     font-weight: 400;
 }
-.bio_buttons a{
+
+.bio_buttons a {
     text-decoration: none;
 }
-.bio button:focus{
+
+.bio button:focus {
     border: 2px solid rgb(82, 184, 82);
 }
+
 menu {
     display: flex;
     list-style: none;
@@ -132,11 +157,13 @@ menu {
     height: 100%;
     margin: 0;
 }
+
 menu li {
     width: 6.5rem;
     font-size: .9rem;
     line-height: 60px;
 }
+
 menu>li>a {
     text-decoration: none;
     color: #6f6f6f;
@@ -144,6 +171,51 @@ menu>li>a {
     font-weight: 400;
 }
 
-.bio-buttons > a > button{
+.bio-buttons>a>button {
     width: 160px;
+}
+
+/*Fin de la partie header.*/
+
+
+/* Passer à la section speciaite. */
+
+.container {
+    width: 100%;
+    padding-top: 3rem;
+}
+
+.specialites {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1rem;
+}
+
+.specialites>h2 {
+    grid-column: 1 / 3;
+    grid-row: 1;
+    font-size: 1.4rem;
+    word-spacing: -2px;
+    text-transform: capitalize;
+    margin: 10px 0;
+}
+
+.specialites .specialite {
+    display: flex;
+}
+
+.specialites .material-icons {
+    font-size: 36px;
+    line-height: 2;
+    color: rgba(82, 184, 82, .85);
+    padding-right: 1rem;
+}
+
+.specialites h3 {
+    margin: 10px 0;
+}
+
+.testimonials h2 {
+    font-size: 1.4rem;
+    margin-top: 0;
 }
